k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-live-mysql
spec:
  selector:
    app: webook-live-mysql
  ports:
    - protocol: TCP
      port: 3309
      targetPort: 3306
  type: LoadBalancer
