k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-live-redis
spec:
  selector:
    app: webook-live-redis
  ports:
    - protocol: TCP
      port: 16379
      targetPort: 6379
      nodePort: 31379
  type: NodePort
