k8s-webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-live
spec:
  selector:
    app: webook-live
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: http
      port: 18080 # 10080 会被Chrome标记为不安全端口
      targetPort: 8080
